--- a/src/views/anime-list.ejs
+++ b/src/views/anime-list.ejs
@@ -132,8 +132,8 @@
     
     
     <!-- Banner Carousel Section -->
-    <div class="container mx-auto px-4 py-4">
-        <div class="carousel-wrapper">
+    <div id="carousel-container" class="carousel-container container mx-auto px-4 py-4">
+        <div class="carousel-wrapper relative">
             <div class="carousel-items">
                 <div class="carousel-item">
                     <a href="#" class="block">
